--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,8 +8,8 @@ pre, a, abbr, acronym, address, big, cite,
 code, del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var, b,
 u, i, center, dl, dt, dd, ol, ul, li, fieldset,
-form, label, legend, table, caption, tbody,
-tfoot, thead, tr, th, td, article, aside,
+form, label, legend, caption,
+tfoot, article, aside,
 canvas, details, embed, figure, figcaption,
 footer, header, hgroup, menu, nav, output, ruby,
 section, summary, time, mark, audio, video {
@@ -41,11 +41,6 @@ blockquote, q {
 blockquote:before, blockquote:after, q:before, q:after {
 	content: '';
 	content: none;
-}
-
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
 }
 
 body {
@@ -318,43 +313,6 @@ hr.major {
 	background-color: rgba(242, 132, 158, 0.1);
 }
 
-/* List */
-
-ol {
-	list-style: decimal;
-	margin: 0 0 2em 0;
-	padding-left: 1.25em;
-}
-
-ol li {
-	padding-left: 0.25em;
-}
-
-ul {
-	list-style: disc;
-	margin: 0 0 2em 0;
-	padding-left: 1em;
-}
-
-ul li {
-	padding-left: 0.5em;
-}
-
-ul.alt {
-	list-style: none;
-	padding-left: 0;
-}
-
-ul.alt li {
-	border-top: solid 1px #c9c9c9;
-	padding: 0.5em 0;
-}
-
-ul.alt li:first-child {
-	border-top: 0;
-	padding-top: 0;
-}
-
 dl {
 	margin: 0 0 2em 0;
 }
@@ -391,160 +349,6 @@ label {
 	margin: 0 0 1em 0;
 }
 
-input[type="text"],
-input[type="password"],
-input[type="email"],
-input[type="tel"],
-select,
-textarea {
-	-moz-appearance: none;
-	-webkit-appearance: none;
-	-ms-appearance: none;
-	appearance: none;
-	background-color: transparent;
-	border: none;
-	border-radius: 0;
-	border-bottom: solid 1px #c9c9c9;
-	color: inherit;
-	display: block;
-	outline: 0;
-	padding: 0;
-	text-decoration: none;
-	width: 100%;
-}
-
-input[type="text"]:invalid,
-input[type="password"]:invalid,
-input[type="email"]:invalid,
-input[type="tel"]:invalid,
-select:invalid,
-textarea:invalid {
-	box-shadow: none;
-}
-
-input[type="text"]:focus,
-input[type="password"]:focus,
-input[type="email"]:focus,
-input[type="tel"]:focus,
-select:focus,
-textarea:focus {
-	border-bottom-color: #1400AD;
-	box-shadow: inset 0 -1px 0 0 #1400AD;
-}
-
-select {
-	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' preserveAspectRatio='none' viewBox='0 0 40 40'%3E%3Cpath d='M9.4,12.3l10.4,10.4l10.4-10.4c0.2-0.2,0.5-0.4,0.9-0.4c0.3,0,0.6,0.1,0.9,0.4l3.3,3.3c0.2,0.2,0.4,0.5,0.4,0.9 c0,0.4-0.1,0.6-0.4,0.9L20.7,31.9c-0.2,0.2-0.5,0.4-0.9,0.4c-0.3,0-0.6-0.1-0.9-0.4L4.3,17.3c-0.2-0.2-0.4-0.5-0.4-0.9 c0-0.4,0.1-0.6,0.4-0.9l3.3-3.3c0.2-0.2,0.5-0.4,0.9-0.4S9.1,12.1,9.4,12.3z' fill='%23c9c9c9' /%3E%3C/svg%3E");
-	background-size: 1.25rem;
-	background-repeat: no-repeat;
-	background-position: calc(100% - 1rem) center;
-	height: 3em;
-	padding-right: 3em;
-	text-overflow: ellipsis;
-}
-
-select option {
-	background: #ffffff;
-}
-
-select:focus::-ms-value {
-	background-color: transparent;
-}
-
-select::-ms-expand {
-	display: none;
-}
-
-input[type="text"],
-input[type="password"],
-input[type="email"],
-select {
-	height: 3em;
-}
-
-textarea {
-	padding: 0;
-	min-height: 3.75em;
-}
-
-input[type="checkbox"],
-input[type="radio"] {
-	-moz-appearance: none;
-	-webkit-appearance: none;
-	-ms-appearance: none;
-	appearance: none;
-	display: block;
-	float: left;
-	margin-right: -2em;
-	opacity: 0;
-	width: 1em;
-	z-index: -1;
-}
-
-input[type="checkbox"] + label,
-input[type="radio"] + label {
-	text-decoration: none;
-	color: #585858;
-	cursor: pointer;
-	display: inline-block;
-	font-size: 1em;
-	font-weight: 300;
-	padding-left: 2.55em;
-	padding-right: 0.75em;
-	position: relative;
-}
-
-input[type="checkbox"] + label:before,
-input[type="radio"] + label:before {
-	-moz-osx-font-smoothing: grayscale;
-	-webkit-font-smoothing: antialiased;
-	display: inline-block;
-	font-style: normal;
-	font-variant: normal;
-	text-rendering: auto;
-	line-height: 1;
-	text-transform: none !important;
-	font-family: 'Font Awesome 5 Free';
-	font-weight: 900;
-}
-
-input[type="checkbox"] + label:before,
-input[type="radio"] + label:before {
-	border-radius: 4px;
-	border: solid 1px #c9c9c9;
-	content: '';
-	display: inline-block;
-	font-size: 0.8em;
-	height: 2.25em;
-	left: 0;
-	line-height: 2.25em;
-	position: absolute;
-	text-align: center;
-	top: 0;
-	width: 2.25em;
-}
-
-input[type="checkbox"]:checked + label:before,
-input[type="radio"]:checked + label:before {
-	background: #585858;
-	border-color: #585858;
-	color: #ffffff;
-	content: '\f00c';
-}
-
-input[type="checkbox"]:focus + label:before,
-input[type="radio"]:focus + label:before {
-	border-color: #1400AD;
-	box-shadow: 0 0 0 1px #1400AD;
-}
-
-input[type="checkbox"] + label:before {
-	border-radius: 4px;
-}
-
-input[type="radio"] + label:before {
-	border-radius: 100%;
-}
-
 /* Image */
 
 .image {
@@ -559,196 +363,6 @@ input[type="radio"] + label:before {
 	display: block;
 }
 
-/* Table */
-
-.table-wrapper {
-	-webkit-overflow-scrolling: touch;
-	overflow-x: auto;
-}
-
-table {
-	margin: 0 0 2em 0;
-	width: 100%;
-}
-
-table tbody tr {
-	border: solid 1px #c9c9c9;
-	border-left: 0;
-	border-right: 0;
-}
-
-	table tbody tr:nth-child(2n + 1) {
-		background-color: rgba(144, 144, 144, 0.075);
-	}
-
-table td {
-	padding: 0.75em 0.75em;
-}
-
-table th {
-	font-size: 0.9em;
-	font-weight: 900;
-	padding: 0 0.75em 0.75em 0.75em;
-	text-align: left;
-}
-
-table thead {
-	border-bottom: solid 2px #c9c9c9;
-}
-
-table tfoot {
-	border-top: solid 2px #c9c9c9;
-}
-
-table.alt {
-	border-collapse: separate;
-}
-
-table.alt tbody tr td {
-	border: solid 1px #c9c9c9;
-	border-left-width: 0;
-	border-top-width: 0;
-}
-
-table.alt tbody tr td:first-child {
-	border-left-width: 1px;
-}
-
-table.alt tbody tr:first-child td {
-	border-top-width: 1px;
-}
-
-table.alt thead {
-	border-bottom: 0;
-}
-
-table.alt tfoot {
-	border-top: 0;
-}
-
-/* Button */
-
-input[type="submit"],
-input[type="reset"],
-input[type="button"],
-button,
-.button {
-	-moz-appearance: none;
-	-webkit-appearance: none;
-	-ms-appearance: none;
-	appearance: none;
-	-moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-	-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-	-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-	transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-	background-color: transparent;
-	border-radius: 4px;
-	border: 0;
-	box-shadow: inset 0 0 0 2px #585858;
-	color: white !important;
-	cursor: pointer;
-	display: inline-block;
-	font-size: 0.8em;
-	font-weight: 900;
-	height: 3.5em;
-	letter-spacing: 0.35em;
-	line-height: 3.45em;
-	overflow: hidden;
-	padding: 0 1.25em 0 1.6em;
-	text-align: center;
-	text-decoration: none;
-	text-overflow: ellipsis;
-	text-transform: uppercase;
-	white-space: nowrap;
-}
-
-input[type="submit"].icon:before,
-input[type="reset"].icon:before,
-input[type="button"].icon:before,
-button.icon:before,
-.button.icon:before {
-	margin-right: 0.5em;
-}
-
-input[type="submit"].fit,
-input[type="reset"].fit,
-input[type="button"].fit,
-button.fit,
-.button.fit {
-	width: 100%;
-}
-
-input[type="submit"]:hover,
-input[type="reset"]:hover,
-input[type="button"]:hover,
-button:hover,
-.button:hover {
-	color: #1400AD !important;
-	box-shadow: inset 0 0 0 2px #1400AD;
-}
-
-input[type="submit"]:active,
-input[type="reset"]:active,
-input[type="button"]:active,
-button:active,
-.button:active {
-	background-color: rgba(242, 132, 158, 0.1);
-}
-
-input[type="submit"].small,
-input[type="reset"].small,
-input[type="button"].small,
-button.small,
-.button.small {
-	font-size: 0.6em;
-}
-
-input[type="submit"].large,
-input[type="reset"].large,
-input[type="button"].large,
-button.large,
-.button.large {
-	font-size: 1em;
-}
-
-input[type="submit"].primary,
-input[type="reset"].primary,
-input[type="button"].primary,
-button.primary,
-.button.primary {
-	box-shadow: none;
-	background-color: #585858;
-	color: #ffffff !important;
-}
-
-input[type="submit"].primary:hover,
-input[type="reset"].primary:hover,
-input[type="button"].primary:hover,
-button.primary:hover,
-.button.primary:hover {
-	background-color: #1400AD;
-}
-
-input[type="submit"].primary:active,
-input[type="reset"].primary:active,
-input[type="button"].primary:active,
-button.primary:active,
-.button.primary:active {
-	background-color: #1400AD;
-}
-
-input[type="submit"].disabled, input[type="submit"]:disabled,
-input[type="reset"].disabled,
-input[type="reset"]:disabled,
-input[type="button"].disabled,
-input[type="button"]:disabled,
-button.disabled,
-button:disabled,
-.button.disabled,
-.button:disabled {
-	pointer-events: none;
-	opacity: 0.25;
-}
 
 /* Nav Bar */
 
@@ -1133,4 +747,28 @@ button:disabled,
 	#wrapper {
 		margin-top: 5em;
 	}
+}
+
+/* Bootstrap Changes */
+
+.active a {
+	color: #1400AD !important;
+	font-weight: 500;
+}
+
+.btn-primary {
+	background-color: #1400AD !important;
+}
+
+.btn-primary:hover {
+	background-color: #999999 !important;
+}
+
+.page-item.active .page-link {
+	background-color: #1400AD !important;
+	color: white !important;
+}
+
+.page-link {
+	color: #999999 !important;
 }
