--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -494,6 +494,7 @@ label {
 	flex-direction: column;
 	justify-content: space-between;
 	padding: 1.2em;
+	box-shadow: inset 0 0 0 0.5px #333333;
 }
 
 .vendor-category-square > img {
@@ -505,7 +506,7 @@ label {
 }
 
 .vendor-category-square:hover {
-	box-shadow: inset 0 0 0 0.5px #1400AD;
+	box-shadow: inset 0 0 0 1px #1400AD;
 }
 
 .vendor-category-square:hover > img {
